# ImageTagAnalyzer

./: .gitignore  README.md  docker-compose.yaml
analytics-service/: Dockerfile  pyproject.toml
analytics-service/app/: config.py  main.py
analyze-service/: Dockerfile  pyproject.toml
analyze-service/app/: config.py  main.py  utils.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  sample_images_router.py
db-setup/: Dockerfile  db-setup.py  pyproject.toml
frontend/: Dockerfile  nginx.conf
frontend/src/: App.jsx
frontend/src/components/: Analytics.jsx  FullScreenImage.jsx  ImageUpload.jsx  TagCloud.jsx
frontend/src/services/: api.js
gateway/: Dockerfile  config.py  main.py  middleware.py  pyproject.toml
gateway/clients/: analytics_client.py  analyze_client.py  sample_client.py
k8s/: analytics-service.yaml  analyze-service.yaml  backend-deployment.yaml  config.yaml  database-deployment.yaml  database.yaml  db-setup-job.yaml  frontend-deployment.yaml  frontend.yaml  gateway.yaml  ingress.yaml  redis-deployment.yaml  redis.yaml  sample-service.yaml  secrets.example
sample-service/: Dockerfile  pyproject.toml
sample-service/app/: config.py  main.py  redis_client.py
shared/: pyproject.toml
shared/src/shared_models/: __init__.py  database.py  models.py
