[tool.poetry]
name = "gateway"
version = "0.1.0"
description = "API Gateway"
authors = [
    "Kir Tarasov <bravekirty@gmail.com>"
]
readme = "https://github.com/bravekirty/ImageTagAnalyzer/blob/main/README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
gunicorn = ">=23.0.0,<24.0.0"
aiohttp = ">=3.13.2,<4.0.0"
python-multipart = ">=0.0.20,<0.0.21"
pydantic = ">=2.0.0,<3.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
httpx = ">=0.27.0,<0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
