[tool.poetry]
name = "shared-models"
version = "0.1.0"
description = "Shared models for ImageTag microservices"
authors = [
    "Kir Tarasov <bravekirty@gmail.com>"
]
packages = [
    { include = "shared_models", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
sqlalchemy = ">=2.0.43,<3.0.0"
alembic = ">=1.16.5,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic-settings = ">=2.10.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
